<?xml version="1.0"?>
<package format="2">
  <name>demo</name>
  <version>0.1.0</version>
  <description>The demo package</description>
  <maintainer email="ga.harkema@avans.nl">Gerard Harkema</maintainer>
  <author>Gerard Harkema</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>flexbe_behavior_engine</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>
